add_executable(asio_chat_client client.cc)
target_link_libraries(asio_chat_client tmuduo_net)

add_executable(asio_chat_loadtest loadtest.cc)
target_link_libraries(asio_chat_loadtest tmuduo_net)

add_executable(asio_chat_server server.cc)
target_link_libraries(asio_chat_server tmuduo_net)

add_executable(asio_chat_server_threaded server_threaded.cc)
target_link_libraries(asio_chat_server_threaded tmuduo_net)

add_executable(asio_chat_server_threaded_efficient server_threaded_efficient.cc)
target_link_libraries(asio_chat_server_threaded_efficient tmuduo_net)

add_executable(asio_chat_server_threaded_highperformance server_threaded_highperformance.cc)
target_link_libraries(asio_chat_server_threaded_highperformance tmuduo_net)

